Networks now collapse correctly.

--- a/web/css/pifi.css
+++ b/web/css/pifi.css
@@ -3,17 +3,19 @@
 }
 
 .icon-wifi3 {
-    float: right;
+
     background: url("../img/wifi3.png") no-repeat center center;
     width: 40px;
     height: 32px;
-    /*display: inline-block;*/
+    margin-left: auto;
+    display: inline-block;
 }
 
 .icon-wifi2 {
     background: url("../img/wifi2.png") no-repeat center center;
     width: 40px;
     height: 32px;
+    margin-left: auto;
     display: inline-block;
 }
 
@@ -21,6 +23,7 @@
     background: url("../img/wifi1.png") no-repeat center center;
     width: 40px;
     height: 32px;
+    margin-left: auto;
     display: inline-block;
 }
 
@@ -28,5 +31,6 @@
     background: url("../img/wifi0.png") no-repeat center center;
     width: 40px;
     height: 32px;
+    margin-left: auto;
     display: inline-block;
 }
